--- a/lib/Directory/Diff.pod.tmpl
+++ b/lib/Directory/Diff.pod.tmpl
@@ -1,3 +1,17 @@
+[%- MACRO example(file) BLOCK %]
+[%- pl =  file _ ".pl" -%]
+[%- out = file _ "-out.txt" -%]
+[% INCLUDE $pl | xtidy %]
+
+produces output
+
+[% INCLUDE $out | xtidy %]
+
+(This example is included as L<F<[% pl
+%]>|https://fastapi.metacpan.org/source/BKB/HTML-Make-[% info.version
+%]/examples/[% pl %]> in the distribution.)  
+[%- END -%]
+
 [% start_year = 2009 %]
 =head1 NAME
 
@@ -5,12 +19,13 @@ Directory::Diff - recursively find differences between similar directories
 
 =head1 SYNOPSIS
 
-[% INCLUDE "synopsis.pl" | xtidy %]
+[% example("synopsis") %]
 
 =head1 VERSION
 
-This document describes Directory::Diff version [% version %],
-corresponding to git commit [% commit.commit %] at [% commit.date %].
+This documents [% info.name %] version [% info.version %]
+corresponding to git commit L<[% commit.commit %]|[% info.repo
+%]/commit/[% commit.commit %]> released on [% commit.date %].
 
 =head1 DESCRIPTION
 
@@ -33,8 +48,8 @@ C<ls_dir> makes a hash containing a true value for each file and
 directory which is found under the directory given as the first
 argument.
 
-It also has an option to print messages on what it finds, by setting a
-second argument to a true value, for example
+If a second argument with a true value is set, it prints debugging
+messages. For example
 
      my %ls = ls_dir ("dir", 1);
 
@@ -59,8 +74,8 @@ C<get_only> returns
 
      %only = ("file" => 1, "dir/file" => 1);
 
-There is also a third option which prints messages on what is found if
-set to a true value, for example,
+A third parameter for debugging makes the module print messages
+on what is found if set to a true value, for example,
 
      my %only = get_only (\%dir1, \%dir2, 1);
 
@@ -154,9 +169,19 @@ directories. This is for testing the C<Directory::Diff> module.
 
 =item L<File::DirCompare>
 
-This seemingly does a very similar thing to Directory::Diff.
+This is similar to Directory::Diff.  Unlike Directory::Diff, it does
+not descend into subdirectories which exist in one directory but not
+the other.
 
 =item L<File::Dircmp>
+
+This mimics the output of the Unix C<diff> command.  Unlike
+Directory::Diff, it does not descend into subdirectories which exist
+in one directory but not the other.
+
+=item L<Test::Dirs>
+
+=item L<Compare::Directory>
 
 =back
 
@@ -167,9 +192,27 @@ rationale for why they are used.
 
 =over
 
+=item L<Carp>
+
+C<croak> and C<carp> are used to report errors.
+
 =item L<File::Compare>
 
-File::Compare is used to check whether two files are different or not.
+File::Compare is used to check whether two identically-named files are
+different or not.
+
+=item L<Cwd/getcwd>
+
+This is used to get the working directory of the module, since it
+changes directory to the directory where the diff is performed.
+
+=item L<File::Copy>
+
+See L<Directory::Diff::Copy>.
+
+=item L<File::Path>
+
+See L<Directory::Diff::Copy>.
 
 =back
 
@@ -191,10 +234,12 @@ one has a file like C<dir1/subdir/file>,
      diff -r dir1 dir2
 
 will tell you "Only in dir1: subdir" but it won't tell you anything
-about the files under "subdir".
+about the files under "subdir". The two Perl modules on CPAN,
+L</File::Dircmp> and L</File::DirCompare> both also stop processing
+when subdirectories differ.
 
-I needed to go down into the subdirectory and find all the files which
-were in all the subdirectories, so I wrote this.
+For my task, I needed to go down into the subdirectory and find all
+the files which were in all the subdirectories, so I wrote this.
 
 I've been using this module for updating web sites with a lot of pages
 since 2009, to avoid repeatedly having to upload the entire
@@ -205,9 +250,9 @@ like F<new-site>, then I use L<Directory::Diff::Copy> to put the
 changed files into yet another directory, like
 F<changed-site-files>. Once the changed files are copied, then I tar,
 gzip, and upload the directory of changed files, and untar it at the
-web host, replacing only files which have changed. I also delete the
-F<old-site> directory and rename F<new-site> to F<old-site> at this
-point in preparation for the next upload.
+web host, thus replacing only files which have changed. I also delete
+the F<old-site> directory and rename F<new-site> to F<old-site> at
+this point in preparation for the next upload.
 
 I'm currently using this for almost all the static content for the
 following web sites: L<http://www.sljfaq.org>,
