Title case in abstract

--- a/lib/Directory/Diff.pod.tmpl
+++ b/lib/Directory/Diff.pod.tmpl
@@ -15,7 +15,7 @@ produces output
 [% start_year = 2009 %]
 =head1 NAME
 
-Directory::Diff - recursively find differences between similar directories
+Directory::Diff - Recursively find differences between similar directories
 
 =head1 SYNOPSIS
 
